--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.17.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^5.1.2",
+    "axios": "^1.2.2",
     "google-maps-react-17": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
     "sass": "^1.53.0",
     "typescript": "^4.5.5",
     "web-vitals": "^1.1.2"
