--- a/app.yml
+++ b/app.yml
@@ -1,10 +1,16 @@
-runtime: nodejs16
+---
 handlers:
-  # Serve all static files with url ending with a file extension
-  - url: /(.*\..+)$
+  - secure: always
+    static_dir: build/static
+    url: /static
+  - secure: always
     static_files: build/\1
-    upload: build/(.*\..+)$
-  # Catch all handler to index.html
-  - url: /.*
+    upload: build/.*\.(json|ico|js)$
+    url: /(.*\.(json|ico|js))$
+  - secure: always
     static_files: build/index.html
     upload: build/index.html
+    url: .*
+manual_scaling:
+  instances: 1
+runtime: nodejs16
